--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Storage Optimizer - Free up gigabytes of storage on your iPhone. Remove junk files, duplicate photos, and cached data with one tap." />
+    <meta name="description" content="Clean Sweep AI - Free up gigabytes of storage on your iPhone. Remove junk files, duplicate photos, and cached data with one tap." />
     <meta name="keywords" content="iPhone storage cleaner, iOS cleaner, free up space, duplicate photos, junk files" />
-    <meta property="og:title" content="Storage Optimizer - iPhone Storage Cleaner" />
+    <meta property="og:title" content="Clean Sweep AI - iPhone Storage Cleaner" />
     <meta property="og:description" content="Free up gigabytes of storage on your iPhone in seconds." />
     <meta property="og:type" content="website" />
-    <title>Storage Optimizer - iPhone Storage Cleaner | Free Up Space Instantly</title>
+    <title>Clean Sweep AI - iPhone Storage Cleaner | Free Up Space Instantly</title>
   </head>
   <body>
     <div id="root"></div>
